<resources>
    <string name="app_name">Movie Kade</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    // Navigation Items
    <string name="title_other">Other</string>
    <string name="nav_now_playing_movies">Now Playing Movies</string>
    <string name="nav_popular_movies">Popular Movies</string>
    <string name="nav_top_rated_movies">Top Rated Movies</string>
    <string name="nav_up_coming_movies">Upcoming Movies</string>
    <string name="nav_bookmark_movies">Favorite Movies</string>
    <string name="nav_about">About</string>
    <string name="nav_settings">Settings</string>
    <string name="error_message_failed">Failed to get results!</string>
    <string name="error_message_internet">No internet connection!</string>
    <string name="error_no_fav">No Favorite Movie!</string>
    <string name="average_vote">%1$.1f/10</string>
    <string name="hello_blank_fragment">Hello blank Fragment</string>
    <string name="expand">EXPAND</string>
    <string name="collapse">Collapse</string>
    <string name="trailers">Trailers</string>
    <string name="review_page_number">%1$d/%2$d</string>
    <string name="time">%1$s:%2$s</string>
    <string name="review_author">%1$s:</string>
    <string name="no_review_available">No Review Available!</string>
    <string name="no_trailer_available">No Trailer Available!</string>
    <string name="reviews">Reviews</string>
    <string name="released">Released</string>
    <string name="movie_length">Length: %1$s</string>
    <string name="movie_released_data">Release Date: %1$s</string>
    <string name="movie_language">Language: %1$s</string>
    <string name="movie_vote_count">Vote Count: %1$s</string>
    <string name="movie_vote_adult">Adult: %1$s</string>
    <string name="movie_vote_budget">Budget: %1$s</string>

    <string name="pref_info_poster_data_key">info_poster_data</string>
    <string name="show_info_on_poster">Show Movie Info</string>

    <string name="pref_title_sort_fav">Favorite Sort</string>
    <string name="pref_key_sort_fav">sort_movies</string>
    <string name="label_sort_fav_old_new">Old To New</string>
    <string name="label_sort_fav_new_old">New To Old</string>
    <string name="key_sort_fav_old_new">ASC</string>
    <string name="key_sort_fav_new_old">DESC</string>
    <string name="three_dot">...</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
</resources>
